Horizontal scrolling issues.

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -93,7 +93,7 @@
   }
 }
 
-@media screen and (max-width: 768) {
+@media screen and (max-width: 768px) {
   .about {
     flex-direction: row; /* Maintain row direction to keep image and text side-by-side */
     align-items: center;
