--- a/src/components/MobileMenu/MobileMenu.css
+++ b/src/components/MobileMenu/MobileMenu.css
@@ -66,7 +66,7 @@
   border-radius: 20px;
   background-color: transparent;
   cursor: pointer;
-  width: 400px;
+  width: 100%;
   height: 50px;
   color: white;
   font-family: "Roboto", Arial, sans-serif;
