--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 104px;
+  padding: 20px 10%;
   border-bottom: 1px solid rgba(246, 244, 244, 0.7);
   color: #fff;
 }
