--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -229,7 +229,6 @@
 @media screen and (max-width: 420px) {
   .news-card {
     width: calc(100% - 20px);
-    margin: 0 auto;
   }
 
   .news-card__image {
