--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -2,7 +2,7 @@
   /* display: flex;
   background: #f9f9f9;
   flex-wrap: wrap; */
-  padding: 80px 102px 80px;
+  padding: 80px 5vw 80px;
   background-color: #f5f6f7;
   margin: 0 auto;
   max-width: 100%;
@@ -32,7 +32,7 @@
   width: 100%;
   padding: 0; */
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 16px;
   width: 100%;
   padding: 0;
